manifests/stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: dev
spec:
  serviceName: svc-database
  replicas: 1
  selector:
    matchLabels:
      app: app-database
  template:
    metadata:
      labels:
        app: app-database
    spec:
      containers:
        - name: mysql
          image: shaikmustafa/phpapp:dbimage
          ports:
            - containerPort: 3306
          
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi

          volumeMounts:
            - mountPath: /usr/share/nginx/html/
              name: mysqlvolume
  
  volumeClaimTemplates:
    - metadata:
        name: mysqlvolume
      spec:
        storageClassName: gp2
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
---
