manifests/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
---
