manifests/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-database
  namespace: dev
spec:
  clusterIP: None
  selector:
    app: app-database
  ports:
    - port: 3306
      targetPort: 3306
